fix: collapse arrow

--- a/src/style/_collapse.scss
+++ b/src/style/_collapse.scss
@@ -22,8 +22,8 @@
         }
             
         .arrow {
-            width: 19px;
-            height: 13px;
+            width: 24px;
+            height: 14px;
             padding-right: 20px;
             transition: transform 0.5s;
         }
